# citeproc-py-styles

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .travis.yml  AUTHORS.rst  MAINTAINERS  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  run-update.sh  setup.cfg  setup.py
.github/actions/pre-install/: action.yml
.github/workflows/: pypi-publish.yml  tests.yml
citeproc_styles/: __init__.py  errors.py  version.py
docs/: conf.py  index.rst  installation.rst
tests/: test_csl.py
