# SPDX-FileCopyrightText: 2016-2018 CERN.
# SPDX-FileCopyrightText: 2021 CERN.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "citeproc-py-styles"
description = "CSL styles."
readme = "README.rst"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "citeproc",
  "csl",
  "styles",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "lxml>=4.1.1",
  "six>=1.10.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/inveniosoftware/citeproc-py-styles"

[project.optional-dependencies]
all = [
  "pytest-invenio>=1.4.0",
  "pytest-invenio>=1.4.0",
]
tests = [
  "pytest-invenio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "citeproc_styles/version.py"

[tool.hatch.build.targets.wheel]
packages = [
  "/citeproc_styles",
]

[tool.hatch.build.targets.sdist]
include = [
  "/citeproc_styles",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--isort --pydocstyle --pycodestyle --doctest-glob="*.rst" --doctest-modules --cov=citeproc_styles --cov-report=term-missing'
testpaths = "tests citeproc_py_styles"
live_server_scope = "module"
